# jam

./: .gitignore  .pyup.yml  .travis.yml  Pipfile  README.md  jam.py  pre-commit.sh  pytest.ini  requirements.txt  requirements_test.txt  requirements_tests.txt  setup.cfg  setup.py
jam/: __init__.py  startup.py
jam/libs/: compute_engine.py  core.py  jenkins.py  utils.py
libs/: compute_engine.py  core.py  jenkins.py
tests/: anonymizer.py  conftest.py
tests/compute_engine/: conftest.py  test_compute_engine.py
tests/core/: conftest.py  test_jam.py  test_node.py
tests/helpers/: helpers_compute_engine.py  helpers_core.py  helpers_jenkins.py
tests/http/: compute.instances.get.build1-provisioning.json  compute.instances.get.build1-running.json  compute.instances.get.build1-terminated.json  compute.instances.get.build2-provisioning.json  compute.instances.get.build2-running.json  compute.instances.get.build2-stopping.json  compute.instances.get.build2-terminated.json  compute.instances.get.nonexistentnode.json  compute.instances.list.json  compute.instances.start.build1.json  compute.instances.stop.build1.json  compute.operations.get-invalid.json  compute.operations.get-start-done.json  compute.operations.get-start-running.json  compute.operations.get-stop-done.json  compute.operations.get-stop-running.json  jenkins.build1.busy.json  jenkins.build1.idle.json  jenkins.build1.offline-long-causereason.json  jenkins.build1.offline-starting-up.json  jenkins.build1.offline-terminated.json  jenkins.build1.temporarilyoffline.json  jenkins.build2.busy.json  (+11 more)
(+7 files in other folders)
